tests/conformance/valid/compose_basic.svp
-- compose_basic.svp — Composición con relación y patrón declarados

codomain K3 = { APTO, NO_APTO, INDETERMINADO };
output_semantics Klin { APTO -> "ok"; NO_APTO -> "no"; INDETERMINADO -> "u"; }

cellspec C1 { b: 3; codomain: K3; semantics: Klin; role: Base; }
cellspec C2 { b: 3; codomain: K3; semantics: Klin; role: Base; }

coupledspec CC1 { cell: C1; bridges: [3]; }

connector Phi1 {
  source_codomain: K3;
  target_position: 3;
  mapping: { APTO -> Zero; NO_APTO -> One; INDETERMINADO -> U; }
}

semantic_relation R_serie {
  kind: DeclaredRelation;
  constraints: [ProfilaxisRiesgo];
}

pattern P_serie {
  kind: DeclaredPattern;
  arity: 2;
}

graph G1 {
  nodes: [CC1, C2];
  edges: [edge(source: CC1, target: C2, position: 3, connector: Phi1)];
  relation: R_serie;
  regime: Simple;
}

let A1 = compose(G1, relations: [R_serie], patterns: [P_serie]);
